修復商品管理分頁顯示問題
- 移除products-tab的內嵌display:none樣式
- 加強CSS權重使用!important
- 添加debug輸出協助診斷問題
- 確保tab切換邏輯正確運作

--- a/admin.html
+++ b/admin.html
@@ -519,11 +519,11 @@
         }
 
         .tab-content {
-            display: none;
+            display: none !important;
         }
 
         .tab-content.active {
-            display: block;
+            display: block !important;
         }
 
         /* 商品卡片樣式 */
@@ -725,7 +725,7 @@
         </div>
 
         <!-- 商品管理分頁 -->
-        <div id="products-tab" class="tab-content" style="display: none;">
+        <div id="products-tab" class="tab-content">
             <div class="stats">
                 <div class="stat-card clickable" onclick="showProducts('all')">
                     <h3>總商品數</h3>
